<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_388"
    android:layout_height="@dimen/dp_64"
    android:background="@drawable/shape_item_forecast">

    <ImageView
        android:id="@+id/icon_weather_hourly"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_16"
        android:contentDescription="@string/icon_weather"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_cloudy" />

    <TextView
        android:id="@+id/text_hour_hourly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_12"
        android:fontFamily="@font/lato_regular"
        android:text="@string/default_time"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/text_day_hourly"
        app:layout_constraintStart_toEndOf="@+id/icon_weather_hourly"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_day_hourly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_12"
        android:fontFamily="@font/lato_regular"
        android:text="@string/default_day"
        android:textColor="@color/color_accent"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_weather_hourly"
        app:layout_constraintTop_toBottomOf="@+id/text_hour_hourly" />

    <TextView
        android:id="@+id/text_weather_hourly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/default_current_weather"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_temp_hourly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/lato_regular"
        android:text="@string/default_current_temp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
