<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_388"
    android:layout_height="@dimen/dp_80"
    android:background="@drawable/shape_item_forecast">

    <ImageView
        android:id="@+id/icon_weather_daily"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:contentDescription="@string/icon_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_cloudy" />

    <TextView
        android:id="@+id/text_day_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:fontFamily="@font/lato_regular"
        android:text="@string/default_day_EEEEE"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/icon_weather_daily"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_temp_day_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/default_daily_temp"
        android:textColor="@color/color_accent"
        app:layout_constraintStart_toEndOf="@+id/icon_weather_daily"
        app:layout_constraintTop_toBottomOf="@+id/text_day_daily" />

    <TextView
        android:id="@+id/text_weather_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_4"
        android:fontFamily="@font/lato_regular"
        android:text="@string/default_weather_daily"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/icon_weather_daily"
        app:layout_constraintTop_toBottomOf="@+id/text_temp_day_daily" />
</androidx.constraintlayout.widget.ConstraintLayout>
